--- a/views/index.erb
+++ b/views/index.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Click the link below to register a Pyppy:</h1>
-    <link  href="/create_puppy.erb">
+    <a href="/create_puppy.erb">Click Here To List A Puppy</a>
   </body>
 </html>
