Automatically backed up by Learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -5,6 +5,9 @@
     <title>Create a Puppy</title>
   </head>
   <body>
-    
+    <form  action="/display_puppy" method="post">
+      <label for="name">Name:<input type="text" name="name" id="name"></label>
+      <label for="breed">Breed:<input type="text" name="breed" id="breed"></label>
+    </form>
   </body>
 </html>
