Automatically backed up by Learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -8,6 +8,7 @@
     <form  action="/display_puppy" method="post">
       <label for="name">Name:<input type="text" name="name" id="name"></label>
       <label for="breed">Breed:<input type="text" name="breed" id="breed"></label>
+      <label for="age">Age:<input type="text" name="age" id="age"></label>
     </form>
   </body>
 </html>
