--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Display puppy</title>
+    <title>Display Puppy</title>
   </head>
   <body>
 
