--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Puppy School</title>
+    <title>Puppy Register</title>
   </head>
   <body>
     <h1>Click the link below to register a Pyppy:</h1>
