Automatically backed up by Learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -5,6 +5,9 @@
     <title>Display Puppy</title>
   </head>
   <body>
-    
+    <h1>Your Puppy has been registered as:</h1>
+    <p>Puppy Name: </p>
+    <p>Puppy Breed: </p>
+    <p>Puppy Age: </p>
   </body>
 </html>
