Automatically backed up by Learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>Your Puppy has been registered as:</h1>
-    <p>Puppy Name: </p>
-    <p>Puppy Breed: </p>
+    <p>Puppy Name: <%=@fido.name%></p>
+    <p>Puppy Breed: <%=@fido.breed%></p>
     <p>Puppy Age: </p>
   </body>
 </html>
