Automatically backed up by Learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -8,6 +8,6 @@
     <h1>Your Puppy has been registered as:</h1>
     <p>Puppy Name: <%=@fido.name%></p>
     <p>Puppy Breed: <%=@fido.breed%></p>
-    <p>Puppy Age: </p>
+    <p>Puppy Age: <%=@fido.age%></p>
   </body>
 </html>
