Automatically backed up by Learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -9,6 +9,7 @@
       <label for="name">Name:<input type="text" name="name" id="name"></label>
       <label for="breed">Breed:<input type="text" name="breed" id="breed"></label>
       <label for="age">Age:<input type="text" name="age" id="age"></label>
+      <label for="submit"><button type="submit" name="submit" id="submit"></button></label>
     </form>
   </body>
 </html>
