Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
     <title>Puppy Register</title>
   </head>
   <body>
-    <h1>Click the link below to register a Pyppy:</h1>
+    <h1>Click the link below to register a Puppy:</h1>
     <a href="/new">Click Here To List A Puppy</a>
   </body>
 </html>
